--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,21 +1,400 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        android:paddingTop="20dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:paddingBottom="15dp"
+        android:background="@color/black"
+        tools:context=".MainActivity"
+        android:id="@+id/main"
+        android:orientation="vertical">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:id="@+id/tvInput"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:background="@color/black"
+            android:padding="10dp"
+            android:textColor="@color/white"
+            android:textSize="48sp"
+            android:gravity="end|bottom" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:background="@color/black"
+            android:orientation="vertical"
+            android:paddingBottom="15dp"
+            android:gravity="start|bottom">
+
+            <!--        <Button-->
+            <!--            android:layout_width="20dp"-->
+            <!--            android:layout_height="20dp"-->
+            <!--            android:background="@drawable/clock"-->
+            <!--            android:textColor="@color/green"/>-->
+
+            <!--        <ProgressBar-->
+            <!--            android:layout_width="0dp"-->
+            <!--            android:layout_height="wrap_content"-->
+            <!--            android:indeterminate="false"-->
+            <!--            android:layout_weight="1"-->
+            <!--            android:outlineSpotShadowColor="@color/white"-->
+            <!--            android:outlineAmbientShadowColor="@color/white"-->
+            <!--            style="?android:attr/progressBarStyleHorizontal"/>-->
+
+            <LinearLayout
+                android:id="@+id/ll_icons"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="25dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp">
+
+                <ImageButton
+                    android:id="@+id/clock"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/black"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/clock"
+                    tools:ignore="SpeakableTextPresentCheck" />
+
+                <ImageButton
+                    android:id="@+id/calculator"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:background="@color/black"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/ic_baseline_calculate_24"
+                    tools:ignore="SpeakableTextPresentCheck" />
+
+                <ImageButton
+                    android:id="@+id/delete"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:background="@color/black"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/ic_baseline_delete_forever_24"
+                    tools:ignore="SpeakableTextPresentCheck" />
+
+            </LinearLayout>
+
+            <View
+                style="@style/Divider.Horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_weight="1">
+
+            <Button
+                android:id="@+id/btnCLR"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:text="C"
+                android:textColor="@color/red"
+                android:textSize="25sp"
+                android:background="@drawable/round_style"
+                tools:ignore="HardcodedText,NestedWeights,OnClick"
+                style="?android:attr/buttonBarButtonStyle" />
+
+            <Button
+                android:id="@+id/btnBraces"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:text="( )"
+                android:textColor="@color/green"
+                android:textSize="25sp"
+                android:background="@drawable/round_style"
+                tools:ignore="HardcodedText"
+                style="?android:attr/buttonBarButtonStyle" />
+
+            <Button
+                android:id="@+id/btnMod"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:text="%"
+                android:textColor="@color/green"
+                android:textSize="25sp"
+                android:background="@drawable/round_style"
+                tools:ignore="HardcodedText"
+                style="?android:attr/buttonBarButtonStyle" />
+
+
+
+            <Button
+                android:id="@+id/btnDivide"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:background="@drawable/round_style"
+                android:text="/"
+                android:textColor="@color/green"
+                android:textSize="25sp"
+                tools:ignore="HardcodedText,OnClick"
+                style="?android:attr/buttonBarButtonStyle" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_weight="1">
+
+            <Button
+                android:id="@+id/btnSeven"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:text="@string/_7"
+                android:textColor="@color/white"
+                android:textSize="25sp"
+                android:background="@drawable/round_style"
+                tools:ignore="NestedWeights"
+                style="?android:attr/buttonBarButtonStyle" />
+
+            <Button
+                android:id="@+id/btnEight"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:textSize="25sp"
+                android:textColor="@color/white"
+                android:background="@drawable/round_style"
+                android:text="@string/_8"
+                style="?android:attr/buttonBarButtonStyle" />
+
+            <Button
+                android:id="@+id/btnNine"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:textSize="25sp"
+                android:textColor="@color/white"
+                android:background="@drawable/round_style"
+                android:text="9"
+                tools:ignore="HardcodedText"
+                style="?android:attr/buttonBarButtonStyle" />
+
+
+            <Button
+                android:id="@+id/btnMultiply"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:textSize="25sp"
+                android:background="@drawable/round_style"
+                android:text="*"
+                android:textColor="@color/green"
+                tools:ignore="HardcodedText,NestedWeights,OnClick"
+                style="?android:attr/buttonBarButtonStyle" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_weight="1">
+
+
+            <Button
+                android:id="@+id/btnFour"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:textSize="25sp"
+                android:textColor="@color/white"
+                android:background="@drawable/round_style"
+                android:text="@string/_4"
+                tools:ignore="NestedWeights"
+                style="?android:attr/buttonBarButtonStyle" />
+
+            <Button
+                android:id="@+id/btnFive"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:textSize="25sp"
+                android:textColor="@color/white"
+                android:background="@drawable/round_style"
+                android:text="@string/_5"
+                style="?android:attr/buttonBarButtonStyle" />
+
+            <Button
+                android:id="@+id/btnSix"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:textSize="25sp"
+                android:background="@drawable/round_style"
+                android:text="@string/_6"
+                android:textColor="@color/white"
+                style="?android:attr/buttonBarButtonStyle" />
+
+
+
+            <Button
+                android:id="@+id/btnSubtract"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:textSize="35sp"
+                android:background="@drawable/round_style"
+                android:text="-"
+                android:textColor="@color/green"
+                tools:ignore="HardcodedText,OnClick"
+                style="?android:attr/buttonBarButtonStyle" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_weight="1">
+
+            <Button
+                android:id="@+id/btnOne"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:textColor="@color/white"
+                android:background="@drawable/round_style"
+                android:text="@string/_1"
+                android:textSize="25sp"
+                tools:ignore="NestedWeights"
+                style="?android:attr/buttonBarButtonStyle" />
+
+            <Button
+                android:id="@+id/btnTwo"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:background="@drawable/round_style"
+                android:text="2"
+                android:textSize="25sp"
+                android:textColor="@color/white"
+                tools:ignore="HardcodedText"
+                style="?android:attr/buttonBarButtonStyle" />
+
+            <Button
+                android:id="@+id/btnThree"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:background="@drawable/round_style"
+                android:text="@string/_3"
+                android:textColor="@color/white"
+                android:textSize="25sp"
+                style="?android:attr/buttonBarButtonStyle" />
+
+            <Button
+                android:id="@+id/btnAdd"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:text="+"
+                android:textColor="@color/green"
+                android:textSize="30sp"
+                android:background="@drawable/round_style"
+                tools:ignore="HardcodedText,OnClick"
+                style="?android:attr/buttonBarButtonStyle" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_weight="1">
+
+            <Button
+                android:id="@+id/btnPM"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:text="+/-"
+                android:textColor="@color/white"
+                android:textSize="25sp"
+                android:background="@drawable/round_style"
+                tools:ignore="HardcodedText,NestedWeights"
+                style="?android:attr/buttonBarButtonStyle" />
+
+            <Button
+                android:id="@+id/btnZero"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:textColor="@color/white"
+                android:background="@drawable/round_style"
+                android:textSize="25sp"
+                android:text="@string/_0"
+                style="?android:attr/buttonBarButtonStyle" />
+
+            <Button
+                android:id="@+id/btnDot"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:text="."
+                android:textColor="@color/white"
+                android:background="@drawable/round_style"
+                android:textSize="25sp"
+                tools:ignore="HardcodedText,NestedWeights,OnClick"
+                style="?android:attr/buttonBarButtonStyle" />
+
+            <Button
+                android:id="@+id/btnEqual"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:text="="
+                android:textColor="@color/black"
+                android:background="@drawable/equal_style"
+                android:textSize="25sp"
+                tools:ignore="HardcodedText,NestedWeights"
+                style="?android:attr/buttonBarButtonStyle" />
+
+
+        </LinearLayout>
+
+    </LinearLayout>
 </layout>
